# gitGoblins

./: .gitignore  Google_Drive_Link.md  README.md  Team_Agreement.md  installation_guide.md
Code/: app.py  package-lock.json  package.json  pyproject.toml  requirements.txt  venv_guide.md
Code/.github/workflows/: ci.yaml
Code/flaskr/: __init__.py  app.py  db.py  init.py  schema.sql  views.py
Code/flaskr/instance/: config.py
Code/flaskr/templates/: index.html  weather_summary.html
Code/instance/: config.py  database.db
Code/static/css/: main.css
Code/tests/: __init__.py  auth_actions.py  conftest.py  data.sql  initMap.test.js  mapFunctionality.test.js  submit.test.js  test_admin.py  test_auth.py  test_db.py  test_example.py  test_factory.py  test_graphs.py  test_icons.py  test_jinja_macros.py  test_notification.py  test_predictions.py  test_queries.py  test_settings.py  test_views.py  test_weather.py  test_weatherApp.py  testing_guide.md
Code/tests/mocks/: domMocks.js  leafletMock.js
Code/weatherApp/: __init__.py  admin.py  auth.py  db.py  graph.py  graphs.py  icons.py  models.py  notification.py  predictions.py  queries.py  schema.sql  settings.py  views.py  weather.py
Code/weatherApp/static/css/: style.css
Code/weatherApp/templates/: admin_dashboard.html.jinja  base.html  base.html.jinja  graph.html.jinja  index.html  index.html.jinja  location_select.html.jinja  login.html  map.html  map.html.jinja  register.html  select_date.html  select_date.html.jinja  settings.html.jinja  weather_summary.html  weather_summary.html.jinja
Data/: weather_data.csv  (+3 more)
(+37 files in other folders)
